# traduisons-hs

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.config  cabal.sandbox.config  stack.yaml  traduisons  traduisons.cabal
executables/: Main.hs  MainCLI.hs  MainGUI.hs
executables/UI/: QML.hs  ui.qml
src/: API.hs  Main.hs  Resources.hs  Types.hs  Util.hs
src/Traduisons/: API.hs  Client.hs  Resources.hs  Types.hs  Util.hs
tests/: TestMain.hs
