name:                traduisons
version:             0.1.0.0
synopsis:            A library and executable for language translation.
description:         A Haskell port of http://github.com/johntyree/traduisons.
license:             BSD3
license-file:        LICENSE
author:              John Tyree
maintainer:          johntyree@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10
data-files:          executables/UI/*.qml

source-repository head
    type: git
    location: https://github.com/johntyree/traduisons-hs.git

Flag gui
    description: Enable main executable build.
    default: True

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:    Traduisons.Client
                      , Traduisons.API
                      , Traduisons.Util
                      , Traduisons.Resources
                      , Traduisons.Types
    -- other-modules:
    ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:     base >= 4.8 && < 5
                     , aeson >= 0.7 && < 0.11
                     , bytestring
                     , containers
                     , HTTP
                     , http-client
                     , http-client-tls
                     , http-types
                     , iso639 >= 0.1 && < 0.2
                     , mtl
                     , process
                     , split
                     , text
                     , time
                     , utf8-string

executable traduisons
  main-is:             MainGUI.hs
  other-modules:       UI.QML, Paths_traduisons
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-tools:         c2hs
  if flag(gui)
    build-depends:       base
                       , haskeline
                       , hsqml
                       , mtl
                       , split
                       , text
                       , traduisons
  else
    buildable: False
  hs-source-dirs:      executables
  default-language:    Haskell2010

executable traduisons-cli
  main-is:             MainCLI.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-tools:         c2hs
  build-depends:       base
                     , haskeline
                     , mtl
                     , split
                     , traduisons
  hs-source-dirs:      executables
  default-language:    Haskell2010

test-suite test
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            TestMain.hs
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
                      , tasty >= 0.7
                      , tasty-hunit
                      , tasty-rerun
                      , traduisons
